# haxe-jvm-jna-call-c-sample

./: .gitignore  README.md  jvm.hxml
libhaxejna/: CMakeLists.txt  README.md  haxejna.c
src/: Main.hx
src/haxejna/: HaxeJNA.hx
